# update-fetch

./: Cargo.toml  Dockerfile  README.md  build-target.bash  default.nix
.github/workflows/: ci.yml
src/: core.rs  lib.rs  main.rs  node.rs
test/: default.nix  fetch-git.nix  fetch-github.nix  fetch-multiple.nix  fetch-nested-set.nix  fetch-tarball.nix  fetch-url.nix  fetch-zip.nix
