[package]
name = "update-fetch"
version = "0.1.0"
authors = ["justinwoo <moomoowoo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nixpkgs-fmt = { git = "https://github.com/nix-community/nixpkgs-fmt", tag = "v0.5.0" }
