[package]
name = "update-fetch"
version = "0.1.0"
authors = ["justinwoo <moomoowoo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nixpkgs-fmt = { git = "https://github.com/justinwoo/nixpkgs-fmt", tag = "freedom-20220604" }
rnix = "*"
rowan = "*"
rayon = "1.2.1"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.42"
